--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Köttur Readme
+Jybos Readme
 
-Köttur ist ein Betriebsystem für x86 Basierte PC's.
+Jybos ist ein Betriebsystem für x86 Basierte PC's.
 Die Verwendung erfolgt auf eigene Gefahr.
